# aufmass

./: .gitignore  00-overview.md  01-compliance-baseline.md  02-data-model.md  03-infrastructure.md  04-backup-archival.md  05-operational-modules.md  06-quotation-engine.md  07-aufmass-ocr.md  07a-vision-client.md  07b-voice-aufmass.md  08-m365-integration.md  09-security-dsgvo.md  10-application-stack.md  99-status.md  CLAUDE.md  README.md  docker-compose.yml  test_two_step.py  test_vision_client.py
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  config.py  db.py  deps.py  errors.py  jobs.py  main.py  migrate.py  seed.py  storage.py
api/app/aufmass/: extraction_prompt.md  schema.py  two_step.py  vision_client.py  voice_client.py
api/app/einvoice/: __init__.py  ubl.py  units.py  validator_client.py
api/app/engine/: checks.py  pricing.py
api/app/gaeb/: exporter.py  parser.py
api/app/katalog/: matcher.py  spreadsheet.py
api/app/routers/: abnahmeprotokoll.py  adresse.py  angebot.py  app_user.py  arbeitszeit.py  aufmass.py  aufmass_entry.py  auftraggeber.py  bankverbindung.py  bestellposition.py  bestellung.py  check_result.py  dashboard.py  fahrt.py  fahrzeug.py  gaeb.py  geocode.py  gewaehrleistung.py  (+15 more)
api/tests/: conftest.py  test_angebot_flow.py  test_arbeitszeit.py  test_aufmass_router.py  test_auftraggeber.py  test_einvoice_ubl.py  test_einvoice_units.py  test_engine_checks.py  test_engine_pricing.py  test_gaeb.py  test_katalog_import.py  test_projekt.py  test_rechnung_flow.py  test_rechnung_xrechnung.py  test_rls.py
(+198 files in other folders)
