[project]
name = "aufmass-api"
version = "0.1.0"
description = "Aufmaß backend: deterministic engines + orchestration (directive 10)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    "pydantic-settings>=2.3",
    "httpx>=0.27",          # backend -> validator / model / m365 (server-side only)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
